--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/training_jpa
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddlAuto=create
+spring.jpa.hibernate.ddlAuto=update
 spring.jpa.openInView=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
